[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/projectiles/bullet.gd" type="Script" id=1]

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 19
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -2, 1, -3, 16, -3, 17, -2, 17, 3, 16, 4, 1, 4, 0, 3 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 275

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -3, -2, 1, -6, 16, -6, 20, -2, 20, 3, 16, 7, 1, 7, -3, 3 )

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 0, -2, 1, -3, 16, -3, 17, -2, 17, 3, 16, 4, 1, 4, 0, 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
